tests/baselines/reference/enumWithComputedMember.errors.txt
tests/cases/compiler/enumWithComputedMember.ts(4,5): error TS1061: Enum member must have initializer.


==== tests/cases/compiler/enumWithComputedMember.ts (1 errors) ====
    enum A { 
        X = "".length, 
        Y = X,
        Z
        ~
!!! error TS1061: Enum member must have initializer.
    }
    